--- a/manual/lc-circuits_en.1
+++ b/manual/lc-circuits_en.1
@@ -1,10 +1,10 @@
-.TH electrontubes 1 "Electrontube bias calculator" "Pozsar Zsolt" "Electrontube bias calculator"
+.TH lc-circuits 1 "LC-circuit calculator" "Pozsar Zsolt" "LC-circuit calculator"
 .SH NAME
-Electrontubes \- Electrontube bias calculator application
+LC-circuits \- LC-circuit calculator application
 .SH SYNOPSIS
-.B electrontubes [-h | --help | -o | -offline | -v | --version]
+.B lc-circuits [-h | --help | -o | -offline | -v | --version]
 .SH DESCRIPTION
-This software  is  a electrontube bias calculator application.
+This software  is a LC-circuit calculator application.
   OS support: FreeBSD, Linux and Windows.
 .PP
 Language support: English and Hungarian.
@@ -42,4 +42,4 @@ l l.
 \fBE-mail:\fR#pozsarzs\@gmail.com
 .TE
 .TP
-Copyright (c) 2012-2016 Pozsar Zsolt
+Copyright (c) 2011-2016 Pozsar Zsolt
