--- a/manual/lc-circuits_hu.1
+++ b/manual/lc-circuits_hu.1
@@ -1,10 +1,10 @@
-.TH electrontubes 1 "Elektroncső munkapont számító alkalmazás" "Pozsár Zsolt" "Elektroncső munkapont számító alkalmazás"
+.TH LC-circuits 1 "LC-áramkör számító alkalmazás" "Pozsár Zsolt" "LC-áramkör számító alkalmazás"
 .SH NÉV
-Elektroncsövek \- Elektroncső munkapontszámító alkalmazás
+LC-circuits \- LC-áramkör számító alkalmazás
 .SH ÁTTEKINTÉS
-.B electrontubes [-h | --help | -o | -offline | -v | --version]
+.B lc-circuits [-h | --help | -o | -offline | -v | --version]
 .SH LEÍRÁS
-Munkapont számító alkalmazás elektroncsöves áramkörök készítéséhez,
+Méretező alkalmazás LC-áramkörökhöz,
 FreeBSD, Linux és Windows operációs rendszerekre.
 .PP
 Nyelvi támogatás: angol és magyar.
@@ -44,4 +44,4 @@ l l.
 \fBE-mail:\fR#pozsarzs\@gmail.com
 .TE
 .TP
-Copyright (c) 2012-2016 Pozsár Zsolt
+Copyright (c) 2011-2016 Pozsár Zsolt
